fix wrapping of team name on scorecard

--- a/app/assets/stylesheets/base/leagues.css.less
+++ b/app/assets/stylesheets/base/leagues.css.less
@@ -96,7 +96,7 @@
     }
 
     .name, .score {
-      font-size: 24px;
+      font-size: 18px;
       font-weight: bold;
       line-height: 50px;
     }
